tests/sources/invalid/generics/new_constructor_empty_type_args.fire
// Parser error: 'new GenericClass<>(...)' with an empty type argument list.

class Box<T> {
    value: T;

    fn Box(value: T) {
        this.value = value;
    }
}

fn new_constructor_empty_type_args() -> void {
    b: Box<int32> = new Box<>(5);  //~ ERROR FS-PARSE-0010 @29
//~^ ERROR FS-PARSE-0010 @29
}
